--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,17 +6,17 @@
     <string name="start">GOT IT</string>
 
     <string name="appname">Bangunan Kita</string>
-    <string name="slide_1_title">Hello Food!</string>
-    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
+    <string name="slide_1_title">lorem ipsum</string>
+    <string name="slide_1_desc">Begining something its wrong ...</string>
 
-    <string name="slide_2_title">Movie Tickets</string>
-    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
+    <string name="slide_2_title">lorem ipsum</string>
+    <string name="slide_2_desc">Begining something its wrong ...</string>
 
-    <string name="slide_3_title">Great Discounts</string>
-    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
+    <string name="slide_3_title">lorem ipsum</string>
+    <string name="slide_3_desc">Begining something its wrong ...</string>
 
-    <string name="slide_4_title">World Travel</string>
-    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+    <string name="slide_4_title">lorem ipsum</string>
+    <string name="slide_4_desc">Begining something its wrong ...</string>
 
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
